.vscode/allianceuat_compare/force-app/main/default/objects/IdibuV3Settings__c/IdibuV3Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Idibu V3 Settings</label>
</CustomObject>