.vscode/allianceuat_compare/force-app/main/default/objects/IdibuV3Settings__c/fields/Application_Secret__c.field-meta.xml
<CustomField>
    <fullName>Application_Secret__c</fullName>
    <label>Application Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>