.vscode/allianceuat_compare/force-app/main/default/objects/IdibuV3Settings__c/fields/Application_URL_base__c.field-meta.xml
<CustomField>
    <fullName>Application_URL_base__c</fullName>
    <label>Application URL base</label>
    <length>255</length>
    <type>Text</type>
</CustomField>