.vscode/allianceuat_compare/force-app/main/default/objects/IdibuV3Settings__c/fields/Use_Application_URL__c.field-meta.xml
<CustomField>
    <fullName>Use_Application_URL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use application URL</label>
    <type>Checkbox</type>
</CustomField>